--- a/shop_origami.html
+++ b/shop_origami.html
@@ -294,6 +294,22 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
+                    <img src="images/shop/17_paper.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                </div>
+                <div class="mt-4 flex justify-between">
+                    <div>
+                    <h3 class="text-sm text-gray-700">
+                        <a href="#">
+                        <span aria-hidden="true" class="absolute inset-0"></span>
+                        Pure Red Origami Paper Set
+                        </a>
+                    </h3>
+                    </div>
+                    <p class="text-sm font-medium text-gray-900">$6.80</p>
+                </div>
+            </div>
+            <div class="group relative">
+                <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
                     <img src="images/shop/8_paper.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
@@ -310,18 +326,18 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/4_ruler.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/13_paper.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
                     <h3 class="text-sm text-gray-700">
                         <a href="#">
                         <span aria-hidden="true" class="absolute inset-0"></span>
-                        Rainbow Ruler
+                        Metallic Pattern Origami Paper 100PCs
                         </a>
                     </h3>
                     </div>
-                    <p class="text-sm font-medium text-gray-900">$1.15</p>
+                    <p class="text-sm font-medium text-gray-900">$10.11</p>
                 </div>
             </div>
             <div class="group relative">
@@ -342,66 +358,50 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/3_ruler.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/14_paper.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
                     <h3 class="text-sm text-gray-700">
                         <a href="#">
                         <span aria-hidden="true" class="absolute inset-0"></span>
-                        Plastic Ruler
+                        Shiny Origami Paper 100PCs
                         </a>
                     </h3>
                     </div>
-                    <p class="text-sm font-medium text-gray-900">$1.10</p>
+                    <p class="text-sm font-medium text-gray-900">$10.10</p>
                 </div>
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/4_book.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/16_paper.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
                     <h3 class="text-sm text-gray-700">
                         <a href="#">
                         <span aria-hidden="true" class="absolute inset-0"></span>
-                        Origami Instructional Book
+                        Vibrant Colors Origami Paper 200PCs
                         </a>
                     </h3>
                     </div>
-                    <p class="text-sm font-medium text-gray-900">$8.90</p>
+                    <p class="text-sm font-medium text-gray-900">$16.70</p>
                 </div>
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/2_score.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/15_paper.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
                     <h3 class="text-sm text-gray-700">
                         <a href="#">
                         <span aria-hidden="true" class="absolute inset-0"></span>
-                        Echohu Scoring and Folding Tool
+                        Butterfly Pattern Origami Paper 100PCs
                         </a>
                     </h3>
                     </div>
-                    <p class="text-sm font-medium text-gray-900">$5.10</p>
-                </div>
-            </div>
-            <div class="group relative">
-                <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/2_eyes.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
-                </div>
-                <div class="mt-4 flex justify-between">
-                    <div>
-                    <h3 class="text-sm text-gray-700">
-                        <a href="#">
-                        <span aria-hidden="true" class="absolute inset-0"></span>
-                        Googly Eyes Fun Pack 500PCs
-                        </a>
-                    </h3>
-                    </div>
-                    <p class="text-sm font-medium text-gray-900">$5.05</p>
+                    <p class="text-sm font-medium text-gray-900">$13.20</p>
                 </div>
             </div>
             <div class="group relative">
@@ -434,12 +434,12 @@
                     </a>
                 </li>
                 <li>
-                    <a href="shop.html" class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800
-                    dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">1</a>
+                    <a href="shop_origami.html" aria-current="page" class="z-10 flex items-center justify-center px-4 h-10 leading-tight text-blue-600 border border-blue-300 bg-blue-50 hover:bg-blue-100
+                    hover:text-blue-700 dark:border-gray-700 dark:bg-gray-700 dark:text-white">1</a>
                 </li>
                 <li>
-                    <a href="shop2.html" aria-current="page" class="z-10 flex items-center justify-center px-4 h-10 leading-tight text-blue-600 border border-blue-300 bg-blue-50 hover:bg-blue-100
-                    hover:text-blue-700 dark:border-gray-700 dark:bg-gray-700 dark:text-white">2</a>
+                    <a href="#" class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800
+                    dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">2</a>
                 </li>
                 <li>
                     <a href="#" class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 rounded-e-lg hover:bg-gray-100 hover:text-gray-700
