--- a/contact.html
+++ b/contact.html
@@ -122,13 +122,15 @@
   }
   ```
 -->
-<div class="isolate bg-white px-6 py-24 sm:py-32 lg:px-8">
+<br>
+<br>
+<br>
 	<div class="absolute inset-x-0 top-[-10rem] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[-20rem]" aria-hidden="true">
 	  <div class="relative left-1/2 -z-10 aspect-[1155/678] w-[36.125rem] max-w-none -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%-40rem)] sm:w-[72.1875rem]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
 	</div>
 	<div class="mx-auto max-w-2xl text-center">
-	  <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Contact sales</h2>
-	  <p class="mt-2 text-lg leading-8 text-gray-600">Aute magna irure deserunt veniam aliqua magna enim voluptate.</p>
+	  <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Contact Us!</h2>
+	  <p class="mt-2 text-lg leading-8 text-gray-600">Send us a message! We will get back to you asap!</p>
 	</div>
 	<form action="#" method="POST" class="mx-auto mt-16 max-w-xl sm:mt-20">
 	  <div class="grid grid-cols-1 gap-x-8 gap-y-6 sm:grid-cols-2">
@@ -163,10 +165,10 @@
 		  <div class="flex h-6 items-center">
 			<!-- Enabled: "bg-indigo-600", Not Enabled: "bg-gray-200" -->
 			<button type="button" class="bg-gray-200 flex w-8 flex-none cursor-pointer rounded-full p-px ring-1 ring-inset ring-gray-900/5 transition-colors duration-200 ease-in-out focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" role="switch" aria-checked="false" aria-labelledby="switch-1-label">
-			  <span class="sr-only">Agree to policies</span>
-			  <!-- Enabled: "translate-x-3.5", Not Enabled: "translate-x-0" -->
-			  <span aria-hidden="true" class="translate-x-0 h-4 w-4 transform rounded-full bg-white shadow-sm ring-1 ring-gray-900/5 transition duration-200 ease-in-out"></span>
-			</button>
+				<span class="sr-only">Agree to policies</span>
+				<!-- Enabled: "translate-x-3.5", Not Enabled: "translate-x-0" -->
+				<span aria-hidden="true" class="translate-x-0 h-4 w-4 transform rounded-full bg-white shadow-sm ring-1 ring-gray-900/5 transition duration-200 ease-in-out"></span>
+			  </button>
 		  </div>
 		  <label class="text-sm leading-6 text-gray-600" id="switch-1-label">
 			By selecting this, you agree to our
@@ -178,7 +180,6 @@
 		<button type="submit" id="formsubmitbtn" class="block w-full rounded-md bg-indigo-600 px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Let's talk</button>
 	  </div>
 	</form>
-  </div>
   
 
 	  <br>
