--- a/crane_upload.html
+++ b/crane_upload.html
@@ -6,6 +6,7 @@
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.css" rel="stylesheet" />
 	<script src="https://cdn.tailwindcss.com"></script>
 	<script src="javascript/points.js"></script>
+	<script src="javascript/image.js"></script>
 </head>
 
 <body>
@@ -159,21 +160,154 @@
             <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-5xl pb-11">Now, scan it to collect points!</h1>
 			
 			<!-- File Upload Button -->
-			<div class="flex items-center justify-center w-full">
-				<label for="dropzone-file" class="flex flex-col items-center justify-center w-full h-64 border-2 border-gray-300 border-dashed rounded-lg cursor-pointer bg-gray-50 dark:hover:bg-gray-800 dark:bg-gray-700 hover:bg-gray-100 dark:border-gray-600 dark:hover:border-gray-500 dark:hover:bg-gray-600">
+			<form id="upload-form">
+				<div class="flex items-center justify-center w-full">
+				  <label for="dropzone-file" class="flex flex-col items-center justify-center w-full h-64 border-2 border-gray-300 border-dashed rounded-lg cursor-pointer bg-gray-50 dark:hover:bg-gray-800 dark:bg-gray-700 hover:bg-gray-100 dark:border-gray-600 dark:hover:border-gray-500 dark:hover:bg-gray-600">
 					<div class="flex flex-col items-center justify-center pt-5 pb-6">
-						<svg class="w-8 h-8 mb-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 16">
-							<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 13h3a3 3 0 0 0 0-6h-.025A5.56 5.56 0 0 0 16 6.5 5.5 5.5 0 0 0 5.207 5.021C5.137 5.017 5.071 5 5 5a4 4 0 0 0 0 8h2.167M10 15V6m0 0L8 8m2-2 2 2"/>
-						</svg>
-						<p class="mb-2 text-sm text-gray-500 dark:text-gray-400"><span class="font-semibold">Click to upload</span> or drag and drop</p>
-						<p class="text-xs text-gray-500 dark:text-gray-400">SVG, PNG, JPG or GIF (MAX. 800x400px)</p>
+					  <svg class="w-8 h-8 mb-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 16">
+						<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 13h3a3 3 0 0 0 0-6h-.025A5.56 5.56 0 0 0 16 6.5 5.5 5.5 0 0 0 5.207 5.021C5.137 5.017 5.071 5 5 5a4 4 0 0 0 0 8h2.167M10 15V6m0 0L8 8m2-2 2 2"/>
+					  </svg>
+					  <p class="mb-2 text-sm text-gray-500 dark:text-gray-400"><span class="font-semibold">Click to upload</span> or drag and drop</p>
+					  <p class="text-xs text-gray-500 dark:text-gray-400">SVG, PNG, JPG or GIF (MAX. 800x400px)</p>
 					</div>
 					<input id="dropzone-file" type="file" class="hidden" />
-				</label>
-			</div> 
+				  </label>
+				</div>
+				<br>
+				<button id="formsubmitbtn" type="submit">Upload Image</button>
+			  </form>
 
         </div>
     </div>
+	<div id="image-container"></div>
+
+	<!-- Title -->
+	<div class="container">
+		<div class="text-left px-56">
+			<h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-5xl pb-11">Leave a review</h1>
+			<!-- TW Elements is free under AGPL, with commercial license required for specific uses. See more details: https://tw-elements.com/license/ and contact us for queries at tailwind@mdbootstrap.com --> 
+		
+			<div>
+				<!-- Star Rating Review -->
+				<ul class="my-1 flex list-none gap-1 p-0" data-te-rating-init>
+				<li>
+				<span
+					class="text-primary [&>svg]:h-5 [&>svg]:w-5"
+					title="Bad"
+					data-te-rating-icon-ref>
+					<svg
+					xmlns="http://www.w3.org/2000/svg"
+					fill="none"
+					viewBox="0 0 24 24"
+					stroke-width="1.5"
+					stroke="currentColor">
+					<path
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z" />
+					</svg>
+				</span>
+				</li>
+				<li>
+				<span
+					class="text-primary [&>svg]:h-5 [&>svg]:w-5"
+					title="Poor"
+					data-te-rating-icon-ref>
+					<svg
+					xmlns="http://www.w3.org/2000/svg"
+					fill="none"
+					viewBox="0 0 24 24"
+					stroke-width="1.5"
+					stroke="currentColor">
+					<path
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z" />
+					</svg>
+				</span>
+				</li>
+				<li>
+				<span
+					class="text-primary [&>svg]:h-5 [&>svg]:w-5"
+					title="OK"
+					data-te-rating-icon-ref>
+					<svg
+					xmlns="http://www.w3.org/2000/svg"
+					fill="none"
+					viewBox="0 0 24 24"
+					stroke-width="1.5"
+					stroke="currentColor">
+					<path
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z" />
+					</svg>
+				</span>
+				</li>
+				<li>
+				<span
+					class="text-primary [&>svg]:h-5 [&>svg]:w-5"
+					title="Good"
+					data-te-rating-icon-ref>
+					<svg
+					xmlns="http://www.w3.org/2000/svg"
+					fill="none"
+					viewBox="0 0 24 24"
+					stroke-width="1.5"
+					stroke="currentColor">
+					<path
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z" />
+					</svg>
+				</span>
+				</li>
+				<li>
+				<span
+					class="text-primary [&>svg]:h-5 [&>svg]:w-5"
+					title="Excellent"
+					data-te-rating-icon-ref>
+					<svg
+					xmlns="http://www.w3.org/2000/svg"
+					fill="none"
+					viewBox="0 0 24 24"
+					stroke-width="1.5"
+					stroke="currentColor">
+					<path
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z" />
+					</svg>
+				</span>
+				</li>
+			</ul>
+		</div>
+
+	
+		<!-- Feedback Input -->
+		<form class="max-w-sm mx-auto">
+			<div class="mb-5">
+				<input type="text" id="large-input" placeholder="Enter feedback..." class="block w-full p-11 text-gray-900 border border-gray-300
+				 rounded-lg bg-gray-50 sm:text-md focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400
+				  dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+			</div>
+		</form>
+		
+		</div>
+	</div>
+
+	<div class="flex items-stretch ">
+		<div class="self-center flex-1 text-center">
+			<button id="button" onclick="showModal()" type="submit" class="bg-indigo-600 shadow-xl hover:bg-indigo-500 text-white font-bold rounded-full p-4 w-48">Submit</button>
+		</div> 
+	</div>
+
+	<div id="myModal" class="modal">
+		<p>pop-up!</p>
+		<button onclick="closeModal()">Close</button>
+	  </div>
+	  <br>
+	  <br>
 
 	<!-- Previous & Next & No Thanks Button -->
 	<div class="flex justify-center content-center space-x-3  h-44">
@@ -199,7 +333,18 @@
 
 	</div>
 
+
+
 </body>
+<script>
+	function showModal() {
+	  document.getElementById("myModal").style.display = "block";
+	}
+
+	function closeModal() {
+	  document.getElementById("myModal").style.display = "none";
+	}
+  </script>
 
 	<!-- Footer -->
 	<footer class="bg-white dark:bg-gray-900">
@@ -286,7 +431,6 @@
 		</div>
 		</div>
 	</footer>
+	
 
-	<script src="javascript/hamburger.js"></script>
-	<script src="javascript/carousel.js"></script>
 </html>
