--- a/pointtest.html
+++ b/pointtest.html
@@ -6,23 +6,77 @@
 	<script src="https://cdn.tailwindcss.com"></script>
   	<script src="javascript/signout.js"></script>
       <style>
-        .popup {
-          display: none;
-          position: fixed;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-          width: 80%;
-          height: 80%;
-          background-color: white;
-          box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-          z-index: 1000;
-        }
-        .popup iframe {
-          width: 100%;
-          height: 100%;
-          border: none;
-        }
+        #openButton {
+  background-color: #DED5F0; /* Light purple */
+  border: none;
+  color: black;
+  padding: 16px 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 2px 2px;
+  cursor: pointer;
+  border-radius: 50%; /* Make the button round */
+  transition: background-color 0.3s; /* Smooth color transition */
+  border: 1px solid black;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Subtle shadow for depth */
+}
+
+#openButton:hover {
+  background-color: #C4B2E1; /* Darker purple on hover */
+}
+
+/* Style for the popup */
+.popup {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #DED5F0;
+  padding: 20px;
+  z-index: 1000;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2); /* Subtle shadow for depth */
+  border-radius: 10px;
+  max-width: 80%;
+  text-align: center;
+}
+
+/* Style for the close button */
+#closeButton {
+  background-color: #f44336; /* Red */
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  margin-top: 10px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s; /* Smooth color transition */
+}
+
+#closeButton:hover {
+  background-color: #d32f2f; /* Darker red on hover */
+}
+
+/* Style for the iframe */
+#sketchfabIframe {
+  width: 60vw;
+  height: 50vh;
+  border: none;
+  border-radius: 10px; /* Slightly rounded edges */
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+  margin-top: 2%;
+}
+
+.popup h1{
+	font-size: 2rem;
+	text-align: center;
+	margin-top: 2%;
+}
       </style>
 
 </head>
@@ -128,10 +182,12 @@
 
 
     
-	<button id="openButton">Open 3D Viewer</button>
+	<button id="openButton"> 3D </button>
 
   <div id="popup" class="popup">
     <button id="closeButton">Close</button>
+	<br>
+	<h1>3D Model View</h1>
     <iframe
       id="sketchfabIframe"
       src=""
