--- a/tutorial.html
+++ b/tutorial.html
@@ -6,6 +6,7 @@
 	<script src="https://cdn.tailwindcss.com"></script>
 	<script src="javascript/signout.js"></script>
 	<script src="javascript/dropdown.js"></script>
+	<script src="javascript/points.js"></script>
 
 </head>
 <body>
