--- a/profile.html
+++ b/profile.html
@@ -224,6 +224,7 @@
                   </div>
                 </div>
               </div>
+              </div>
               
 
 
@@ -311,9 +312,5 @@
       </div>
     </div>
 </footer>
-
-	
-	<script src="javascript/hamburger.js"></script>
-	<script src="javascript/carousel.js"></script>
 </body>
 </html>
