--- a/tutorial-animals.html
+++ b/tutorial-animals.html
@@ -125,7 +125,7 @@
 				<div class="dropdown-container">
 					<div class="sec-center">
 						<input class="dropdown" type="checkbox" id="dropdown1" name="dropdown1"/>
-						<label class="for-dropdown" for="dropdown1">Collection <i class="uil uil-arrow-down"></i></label>
+						<label class="for-dropdown" for="dropdown1">Animals <i class="uil uil-arrow-down"></i></label>
 						<div class="section-dropdown"> 
 							<input class="dropdown-sub" type="checkbox" id="dropdown-sub1" name="dropdown-sub1"/>
 							<div class="section-dropdown-sub"> 
