--- a/tutorial-beginner.html
+++ b/tutorial-beginner.html
@@ -138,7 +138,7 @@
 					</div>
 					<div class="sec-center2">
 						<input class="dropdown2" type="checkbox" id="dropdown2" name="dropdown2"/>
-						<label class="for-dropdown2" for="dropdown2">Difficulty <i class="uil uil-arrow-down"></i></label>
+						<label class="for-dropdown2" for="dropdown2">Beginner <i class="uil uil-arrow-down"></i></label>
 						<div class="section-dropdown2"> 
 							<input class="dropdown-sub" type="checkbox" id="dropdown-sub2" name="dropdown-sub2"/>
 							<div class="section-dropdown-sub"> 
