--- a/profile.html
+++ b/profile.html
@@ -123,8 +123,8 @@
                 <div class="mx-auto grid max-w-2xl grid-cols-1 items-center gap-x-8 gap-y-16 px-4 py-24 sm:px-6 sm:py-32 lg:max-w-7xl lg:grid-cols-2 lg:px-8">
                   <div>
                     <img src="images/profile/profilepic.jpg" class="w-44 h-44 rounded-full">
-                    <h2 class="pt-8 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Bobby Lee</h2>
-                    <p class="mt-4 text-gray-500">bobbeelee@gmail.com</p>
+                    <h2 id="userID" class="pt-8 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">${userName}</h2>
+                    <p id="emailID" class="mt-4 text-gray-500">`${email}`</p>
               
                     <dl class="mt-16 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 sm:gap-y-16 lg:gap-x-8">
                       <div>
@@ -136,6 +136,8 @@
                         <dd class="mt-2 text-sm text-gray-500">Followings</dd>
                       </div>
                     </dl>
+
+                    <h1 id="pointsID">${points}</h1>
                 </div>
 
                     <!-- Toggle -->
@@ -313,15 +315,25 @@
     </div>
 </footer>
 <script>
+  document.addEventListener("DOMContentLoaded", function () { 
   const loggedInUser = JSON.parse(localStorage.getItem("loggedInUser"));
 
 if (loggedInUser && loggedInUser.userLogged) {
   const userName = loggedInUser.username;
+  const email = loggedInUser.email;
+  const points = loggedInUser.points;
   alert(`Welcome ${userName}, you are logged in`);
+  console.log(userName);
+  console.log(email);
+  console.log(loggedInUser);
+  userID.innerHTML = ` ${userName}`;
+  emailID.innerHTML = `${email}`; 
+  pointsID.innerHTML = `Points: ${points}`;
 } else {
   const confirmLogout = confirm("You are not logged in. Login to view your profile");
   window.location.href = "login.html";
 }
+  })
 
 </script>
 </body>
