--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
 					  <!-- <a href="about.html" class="bg-indigo-600 text-white rounded-md px-3 py-2 text-xl font-medium" aria-current="page">About Us</a> -->
 					  <a href="about.html" class="text-gray-900 hover:bg-indigo-500 hover:text-white rounded-md px-3 py-2 text-xl font-medium">About Us</a>
 					  <a href="tutorial.html" class="text-gray-900 hover:bg-indigo-500 hover:text-white rounded-md px-3 py-2 text-xl font-medium">Tutorials</a>
-					  <a href="#" class="text-gray-900 hover:bg-indigo-500 hover:text-white rounded-md px-3 py-2 text-xl font-medium">Shop</a>
+					  <a href="shop.html" class="text-gray-900 hover:bg-indigo-500 hover:text-white rounded-md px-3 py-2 text-xl font-medium">Shop</a>
 					  <a href="contact.html" class="text-gray-900 hover:bg-indigo-500 hover:text-white rounded-md px-3 py-2 text-xl font-medium">Contact Us</a>
 					</div>
 				  </div>
