--- a/index.html
+++ b/index.html
@@ -56,13 +56,6 @@
 				  </div>
 				</div>
 				<div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
-				  <button type="button" class="relative rounded-full bg-gray-800 p-1 text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800">
-					<span class="absolute -inset-1.5"></span>
-					<span class="sr-only">View notifications</span>
-					<svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-					  <path stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 005.454-1.31A8.967 8.967 0 0118 9.75v-.7V9A6 6 0 006 9v.75a8.967 8.967 0 01-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 01-5.714 0m5.714 0a3 3 0 11-5.714 0" />
-					</svg>
-				  </button>
 		  
 				  <!-- Profile dropdown -->
 				  <div class="relative ml-3">
@@ -113,7 +106,7 @@
 		  <div class="relative mx-auto max-w-7xl px-4 sm:static sm:px-6 lg:px-8">
 			<div class="sm:max-w-lg">
 			  <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Want to explore the World of Origami?</h1>
-			  <p class="mt-4 text-xl text-gray-500">OrigaME! is a friend that accompanies your children how to fold origami.</p>
+			  <p class="mt-4 text-xl text-gray-500">OrigaME! is a friend that accompanies<br> your children how to fold origami.</p>
 			</div>
 			<div>
 			  <div class="mt-10">
@@ -152,68 +145,66 @@
 				  </div>
 				</div>
 	  
-				<a href="tutorial.html" class="inline-block rounded-md border border-transparent bg-indigo-600 px-8 py-3 text-center font-medium text-white hover:bg-indigo-700">Explore Tutorials</a>
+				<a href="tutorial.html" class="inline-block rounded-md border border-transparent bg-indigo-500 px-8 py-3 text-center font-medium text-white hover:bg-indigo-700">Explore Tutorials</a>
 			  </div>
 			</div>
 		  </div>
 		</div>
 	  </div>
 
-	  
-	<!-- Card Carousell -->
-	<!-- <div class="md:container md:mx-auto">
-		<div class="text-center pt-28">
-
-			<h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Ready to fold paper into art?</h1>
-			
-			<p class="mt-6 text-lg leading-8 text-gray-600">Unleash your magic with OrigaME!</p>
-			
-			<div class="mt-10 flex items-center justify-center gap-x-6 py-10">
-				<a href="tutorial.html" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline
-				focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Look at tutorials</a>
-				<a href="about.html" class="text-sm font-semibold leading-6 text-gray-900">About OrigaME! <span aria-hidden="true">→</span></a>
-			</div> -->
-			
-		<!-- </div>
-
-		<input type="radio" name="slider" id="item-1" checked>
-		<input type="radio" name="slider" id="item-2">
-		<input type="radio" name="slider" id="item-3">
-
-		<div class="cards">
-
-			<label class="card" for="item-1" id="origami-crane">
-			<img src="images/origami/crane.jpg" alt="crane">
-			</label>
-
-			<label class="card" for="item-2" id="origami-cat">
-			<img src="images/origami/cat.jpg" alt="cat">
-			</label>
-
-			<label class="card" for="item-3" id="origami-tulip">
-			<img src="images/origami/tulip.jpg" alt="tulip">
-			</label>
-
-		</div> -->
-
-	<!-- </div> -->
-
-	<!-- Collect Badges -->
-	<div class="class="md:container md:mx-auto">
-		<div class="text-center pt-28">
-			<h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Collect Badges!</h1>
-			<div class="w-50 py-10">
-				<img class="inline-flex items-center justify-center w-40 h-40" src="images/badge_icon/icon1.png">
-				<img class="inline-flex items-center justify-center w-40 h-40" src="images/badge_icon/icon2.png">
-				<img class="inline-flex items-center justify-center w-40 h-40" src="images/badge_icon/icon3.png">
+	  <div class="overflow-hidden bg-white py-24 sm:py-32">
+		<div class="mx-auto max-w-7xl px-6 lg:px-8">
+		  <div class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 sm:gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-2">
+			<div class="lg:pr-8 lg:pt-4">
+			  <div class="lg:max-w-lg">
+				<h2 class="text-base font-semibold leading-7 text-indigo-600">Your Helping Hand</h2>
+				<p class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Let OrigaME! accompany your child in Creative Learning</p>
+				<p class="mt-6 text-lg leading-8 text-gray-600">Why OrigaME?</p>
+				<dl class="mt-10 max-w-xl space-y-8 text-base leading-7 text-gray-600 lg:max-w-none">
+				  <div class="relative pl-9">
+					<dt class="inline font-semibold text-gray-900">
+					  <svg class="absolute left-1 top-1 h-5 w-5 text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+						<path fill-rule="evenodd" d="M5.5 17a4.5 4.5 0 01-1.44-8.765 4.5 4.5 0 018.302-3.046 3.5 3.5 0 014.504 4.272A4 4 0 0115 17H5.5zm3.75-2.75a.75.75 0 001.5 0V9.66l1.95 2.1a.75.75 0 101.1-1.02l-3.25-3.5a.75.75 0 00-1.1 0l-3.25 3.5a.75.75 0 101.1 1.02l1.95-2.1v4.59z" clip-rule="evenodd" />
+					  </svg>
+					  Endless Flow of Creativity
+					</dt>
+					<dd class="inline"><br>Develop your child's artistic side to encourage their creativity and imagination, let them express themselves through paper folding with Origami.
+						</dd>
+				  </div>
+				  <div class="relative pl-9">
+					<dt class="inline font-semibold text-gray-900">
+					  <svg class="absolute left-1 top-1 h-5 w-5 text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+						<path fill-rule="evenodd" d="M10 1a4.5 4.5 0 00-4.5 4.5V9H5a2 2 0 00-2 2v6a2 2 0 002 2h10a2 2 0 002-2v-6a2 2 0 00-2-2h-.5V5.5A4.5 4.5 0 0010 1zm3 8V5.5a3 3 0 10-6 0V9h6z" clip-rule="evenodd" />
+					  </svg>
+					  Self Directed Learning
+					</dt>
+					<dd class="inline"><br>The implementation of simple yet straightforward elements, as well as
+						OrigaME's mascot, Kokoro, will guide your child through their journey in OrigamME!</dd>
+				  </div>
+				  <div class="relative pl-9">
+					<dt class="inline font-semibold text-gray-900">
+					  <svg class="absolute left-1 top-1 h-5 w-5 text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+						<path d="M4.632 3.533A2 2 0 016.577 2h6.846a2 2 0 011.945 1.533l1.976 8.234A3.489 3.489 0 0016 11.5H4c-.476 0-.93.095-1.344.267l1.976-8.234z" />
+						<path fill-rule="evenodd" d="M4 13a2 2 0 100 4h12a2 2 0 100-4H4zm11.24 2a.75.75 0 01.75-.75H16a.75.75 0 01.75.75v.01a.75.75 0 01-.75.75h-.01a.75.75 0 01-.75-.75V15zm-2.25-.75a.75.75 0 00-.75.75v.01c0 .414.336.75.75.75H13a.75.75 0 00.75-.75V15a.75.75 0 00-.75-.75h-.01z" clip-rule="evenodd" />
+					  </svg>
+					  Fun Education
+					</dt>
+					<dd class="inline"><br>Fun and educational outlet for children to enhance both their physical and cognitive development.</dd>
+				  </div>
+				</dl>
+			  </div>
 			</div>
+			<img src="images/mascot/kokoro.png" alt="Product screenshot" class="w-[48rem] max-w-none rounded-xl sm:w-[57rem] md:-ml-4 lg:-ml-0" width="2432" height="1442">
+		  </div>
 		</div>
-	</div>
+	  </div>
+	  
 
-	<!-- Exchange Into Rewards -->
+
+	<!-- Collect Badges & Exchange to Rewards -->
 	<div class="class="md:container md:mx-auto">
 		<div class="text-center pt-28">
-			<h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Exchange them into Rewards!</h1>
+			<h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Collect Badges & <br> Exchange them into Rewards!</h1>
 			<div class="w-50 py-10">
 				<img class="inline-flex items-center justify-center w-40 h-40" src="images/badge_icon/icon1.png">
 				<img class="inline-flex items-center justify-center w-40 h-40" src="images/badge_icon/icon2.png">
@@ -243,14 +234,14 @@
 	</div>
 
 	<div class="md:container md:mx-auto">
-		<div class="text-center pt-28">
+		<div class="text-center pt-28 pb-28">
 
 			<h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Ready to fold paper into art?</h1>
 			
 			<p class="mt-6 text-lg leading-8 text-gray-600">Unleash your magic with OrigaME!</p>
 			
 			<div class="mt-10 flex items-center justify-center gap-x-6 py-10">
-				<a href="tutorial.html" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline
+				<a href="tutorial.html" class="rounded-md bg-indigo-500 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-700 focus-visible:outline
 				focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Look at tutorials</a>
 				<a href="about.html" class="text-sm font-semibold leading-6 text-gray-900">About OrigaME! <span aria-hidden="true">→</span></a>
 			</div>
