--- a/template.html
+++ b/template.html
@@ -37,7 +37,7 @@
 				  <div class="hidden sm:ml-6 sm:block">
 					<div class="flex space-x-4 mt-4">
 
-					  <a href="about.html" class="text-gray-900 hover:bg-indigo-500 hover:text-white rounded-md px-3 py-2 text-xl font-medium">About Us</a>
+					  <a href="about.html" class="text-gray-900 hover:bg-indigo-500 hover:text-white rounded-md px-3 py-2 text-xl font-medium">About</a>
 					  <a href="tutorial.html" class="text-gray-900 hover:bg-indigo-500 hover:text-white rounded-md px-3 py-2 text-xl font-medium">Tutorials</a>
 					  <a href="shop.html" class="text-gray-900 hover:bg-indigo-500 hover:text-white rounded-md px-3 py-2 text-xl font-medium">Shop</a>
 					  <a href="contact.html" class="text-gray-900 hover:bg-indigo-500 hover:text-white rounded-md px-3 py-2 text-xl font-medium">Contact Us</a>
@@ -82,19 +82,19 @@
 	<br>
 
 
-<footer class="bg-white dark:bg-gray-900">
+<footer class="bg-indigo-900 dark:bg-gray-900">
     <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
         <div class="md:flex md:justify-between">
           <div class="mb-6 md:mb-0">
               <a href="https://flowbite.com/" class="flex items-center">
                   <img src="images/bloopbloopstudio_logo.png" class="h-8 me-3" alt="BloopBloop Studios Logo" />
-                  <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">BloopBloop Studios</span>
+                  <span class="self-center text-2xl font-semibold whitespace-nowrap text-indigo-50">BloopBloop Studios</span>
               </a>
           </div>
           <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
               <div>
-                  <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">About</h2>
-                  <ul class="text-gray-500 dark:text-gray-400 font-medium">
+                  <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase text-indigo-50">About</h2>
+                  <ul class="text-gray-300 dark:text-gray-400 font-medium">
                       <li class="mb-4">
                           <a href="about.html" class="hover:underline">About Us</a>
                       </li>
@@ -104,8 +104,8 @@
                   </ul>
               </div>
               <div>
-                  <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Install OrigaME!</h2>
-                  <ul class="text-gray-500 dark:text-gray-400 font-medium">
+                  <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase text-indigo-50">Install OrigaME!</h2>
+                  <ul class="text-gray-300 dark:text-gray-30 font-medium">
                       <li class="mb-4">
                           <a href="#" class="hover:underline ">Apple Store</a>
                       </li>
@@ -115,8 +115,8 @@
                   </ul>
               </div>
               <div>
-                  <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Legal</h2>
-                  <ul class="text-gray-500 dark:text-gray-400 font-medium">
+                  <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase text-indigo-50">Legal</h2>
+                  <ul class="text-gray-300 dark:text-gray-400 font-medium">
                       <li class="mb-4">
                           <a href="#" class="hover:underline">Privacy Policy</a>
                       </li>
@@ -129,16 +129,16 @@
       </div>
       <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
       <div class="sm:flex sm:items-center sm:justify-between">
-          <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 <a href="about.html" class="hover:underline">BloopBloop Studios™</a>. All Rights Reserved.
+          <span class="text-sm text-gray-300 sm:text-center dark:text-gray-400">© 2023 <a href="about.html" class="hover:underline">BloopBloop Studios™</a>. All Rights Reserved.
           </span>
           <div class="flex mt-4 sm:justify-center sm:mt-0">
-              <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
+              <a href="#" class="text-gray-300 hover:text-gray-900 dark:hover:text-white">
                   <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 8 19">
                         <path fill-rule="evenodd" d="M6.135 3H8V0H6.135a4.147 4.147 0 0 0-4.142 4.142V6H0v3h2v9.938h3V9h2.021l.592-3H5V3.591A.6.6 0 0 1 5.592 3h.543Z" clip-rule="evenodd"/>
                     </svg>
                   <span class="sr-only">Facebook page</span>
               </a>
-              <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
+              <a href="#" class="text-gray-300 hover:text-gray-900 dark:hover:text-white ms-5">
                   <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 17">
                     <path fill-rule="evenodd" d="M20 1.892a8.178 8.178 0 0 1-2.355.635 4.074 4.074 0 0 0 1.8-2.235 8.344 8.344 0 0 1-2.605.98A4.13 4.13 0 0 0 13.85 0a4.068 4.068 0 0 0-4.1 4.038 4 4 0 0 0 .105.919A11.705 11.705 0 0 1 1.4.734a4.006 4.006 0 0 0 1.268 5.392 4.165 4.165 0 0 1-1.859-.5v.05A4.057 4.057 0 0 0 4.1 9.635a4.19 4.19 0 0 1-1.856.07 4.108 4.108 0 0 0 3.831 2.807A8.36 8.36 0 0 1 0 14.184 11.732 11.732 0 0 0 6.291 16 11.502 11.502 0 0 0 17.964 4.5c0-.177 0-.35-.012-.523A8.143 8.143 0 0 0 20 1.892Z" clip-rule="evenodd"/>
                 </svg>
