--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
   <head>
     <title>About</title>
 	<link rel="stylesheet" type="text/css" href="styles/aboutstyle.css">
+  <link rel="icon" type="image/x-icon" href="images/1x/LogoHeart.png">
 	<script src="https://cdn.tailwindcss.com"></script>
   <script src="javascript/signout.js"></script>
   </head>
