--- a/crane_video.html
+++ b/crane_video.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Crane Origami</title>
 	<link rel="stylesheet" type="text/css" href="styles/tutorialstyle.css">
+    <link rel="icon" type="image/x-icon" href="images/1x/LogoHeart.png">
 	<script src="https://cdn.tailwindcss.com"></script>
 
 </head>
