--- a/shop2.html
+++ b/shop2.html
@@ -3,22 +3,8 @@
 <head>
 	<title>OrigaMe!</title>
 	<link rel="stylesheet" type="text/css" href="styles/styles.css">
+    <link rel="icon" type="image/x-icon" href="images/1x/LogoHeart.png">
 	<script src="https://cdn.tailwindcss.com"></script>
-	<!-- <style>
-		@import url('https://fonts.googleapis.com/css2?family=Agbalumo&family=Heebo:wght@500&family=Inter:wght@400;500;600;700;800&family=Public+Sans:wght@600&family=Roboto:wght@400;900&display=swap');
-	</style> -->
-	<!-- <script>
-		tailwind.config = {
-// 		  theme: {
-// 			fontFamily:{
-// 				body: [font-family: 'Agbalumo', system-ui;
-// font-family: 'Heebo', sans-serif;
-// font-family: 'Inter', sans-serif;
-// font-family: 'Public Sans', sans-serif;
-// font-family: 'Roboto', sans-serif;]'
-		
-// 		  		}
-			} -->
 
 </head>
 <body>
