--- a/crane_end1.html
+++ b/crane_end1.html
@@ -4,6 +4,7 @@
 <head>
 	<title>OrigaMe!</title>
 	<link rel="stylesheet" type="text/css" href="styles/styles.css">
+    <link rel="icon" type="image/x-icon" href="images/1x/LogoHeart.png">
 	<script src="https://cdn.tailwindcss.com"></script>
 </head>
 
