--- a/crane_upload.html
+++ b/crane_upload.html
@@ -3,6 +3,7 @@
 <head>
 	<title>OrigaMe!</title>
 	<link rel="stylesheet" type="text/css" href="styles/styles.css">
+	<link rel="icon" type="image/x-icon" href="images/1x/LogoHeart.png">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.css" rel="stylesheet" />
 	<script src="https://cdn.tailwindcss.com"></script>
 	<script src="javascript/points.js"></script>
