--- a/tutorial.html
+++ b/tutorial.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Tutorials</title>
 		<link rel="stylesheet" type="text/css" href="styles/tutorialstyle.css">
+		<link rel="icon" type="image/x-icon" href="images/1x/LogoHeart.png">
 		<script src="https://cdn.tailwindcss.com"></script>
 		<script src="javascript/signout.js"></script>
 		<script src="javascript/dropdown.js"></script>
@@ -95,11 +96,11 @@
 				<div class="dropdown-container">
 					<div class="sec-center">
 						<input class="dropdown" type="checkbox" id="dropdown1" name="dropdown1"/>
-						<label class="for-dropdown" for="dropdown1">Collection <i class="uil uil-arrow-down"></i></label>
+						<label class="for-dropdown" for="dropdown1">Category<i class="uil uil-arrow-down"></i></label>
 						<div class="section-dropdown"> 
 							<input class="dropdown-sub" type="checkbox" id="dropdown-sub1" name="dropdown-sub1"/>
 							<div class="section-dropdown-sub"> 
-								<a href="tutorial-animals.html">Animals <i class="uil uil-arrow-right"></i></a>
+								<a href="tutorial-animals.html">Animals<i class="uil uil-arrow-right"></i></a>
 								<a href="#">Decorations <i class="uil uil-arrow-right"></i></a>
 								<a href="#">Plants <i class="uil uil-arrow-right"></i></a>
 								<a href="#">Vehicles <i class="uil uil-arrow-right"></i></a>
@@ -108,18 +109,17 @@
 					</div>
 					<div class="sec-center2">
 						<input class="dropdown2" type="checkbox" id="dropdown2" name="dropdown2"/>
-						<label class="for-dropdown2" for="dropdown2">Difficulty <i class="uil uil-arrow-down"></i></label>
+						<label class="for-dropdown2" for="dropdown2">Difficulty<i class="uil uil-arrow-down"></i></label>
 						<div class="section-dropdown2"> 
 							<input class="dropdown-sub" type="checkbox" id="dropdown-sub2" name="dropdown-sub2"/>
 							<div class="section-dropdown-sub"> 
-								<a href="tutorial-beginner.html">Beginner <i class="uil uil-arrow-right"></i></a>
+								<a href="tutorial-beginner.html">Beginner<i class="uil uil-arrow-right"></i></a>
 								<a href="#">Intermediate <i class="uil uil-arrow-right"></i></a>
 								<a href="#">Advanced <i class="uil uil-arrow-right"></i></a>
 							</div>
 						</div>
 					</div>
 				</div>
-
 
 					<div class="bg-white">
 						<div class="mx-auto max-w-auto px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
