contact us, about us update

--- a/about.html
+++ b/about.html
@@ -151,7 +151,9 @@
    
   <div class="team">
     <h1>BloopBloop Studios</h1>
+    <div class="complogo">
     <img src="images/bloopbloopstudio_logo.png" class="w-96 h-auto items-center">
+    </div>
     <br>
     
     <div class="aboutmalc">
