--- a/contact.html
+++ b/contact.html
@@ -143,19 +143,33 @@
 
 	  <br>
 	  <br>
+	  <br>
 
 	  <div class="faq-container">
 		<h1>FAQ</h1>
 		<br>
 		<details>
-		  <summary>Who founded origaME!</summary>
-		  <p>Sung Yejoy</p>
+		  <summary>I am having issues with my account</summary>
+		  <p>Please ensure that the username and password used are correct. If trying to register for a new account, create a new unique username as you can't use the same username twice!</p>
 		</details>
 		<details>
-		  <summary>What can I do with points?</summary>
-		  <p>Points can be redeemed for rewards through this <a href="rewards.html">page!</a></p>
+		  <summary>What are points?</summary>
+		  <p>Points are earned per completion of each tutorial or challenges! Make sure to collect as much points as possible as you can redeem it for rewards through this <a href="rewards.html">page!</a></p>
 		</details>
-		<!-- Add more FAQ items as needed -->
+		<details>
+			<summary>Will points expire?</summary>
+			<p>Yes! Points do expire after a certain period of time. Ours being a maximum duration of 1 year from the time u earned it! So make sure to use it well!</p>
+		</details>
+		<details>
+			<summary>I am having issues accessing the tutorials</summary>
+			<p>Make sure that you are logged in. If it still has issues after logging in, ensure that your web browser do support videos!</p>
+		</details>
+		<details>
+			<summary>Why OrigaME!</summary>
+			<p>Our main purpose is to actually spread the joy of creating origamis with everyone! We plan to make this platform the best we can to help aid in learning a new hobby or make new friends!
+				For more information, you can check out our <a href="about.html">About page</a> or drop us a message! We will get back to you asap.
+			</p>
+		</details>
 	  </div>
 
 </body>
