--- a/crane_upload.html
+++ b/crane_upload.html
@@ -303,15 +303,25 @@
 	</div>
 
 
+	<!-- Modal -->
 	<div class="modal-container">
 		<div id="myModal" class="modal">
-		  <img src="images/points.png">
+			<h2 class="text-center">
+				Congratulations!
+				<br>
+				You've received...
+			</h2>
+			<h1 class="text-center">
+				50 Stars!
+			</h1>
+		  <img src="images/1x/happykokoro.png">
 		  <button id="claim" onclick="closeModal()" type="submit" class="bg-indigo-600 shadow-xl hover:bg-indigo-500 text-white font-bold rounded-full p-4 w-48">Explore other Origami!</button>
 		</div>
 	  </div>
 
 	  <br>
 	  <br>
+
 	<!-- Previous & Next & No Thanks Button -->
 	<div class="flex justify-center content-center space-x-3  h-44">
 		
@@ -325,13 +335,6 @@
 		
 		<a href="tutorial.html" id ="claim" name="claim" class="flex items-center justify-center px-4 h-10 text-base font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
 			No Thanks
-		</a>
-
-		<a href="review_page.html" class="flex items-center justify-center px-4 h-10 text-base font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
-			Next
-			<svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-				<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-			</svg>
 		</a>
 
 	</div>
