--- a/tutorial-beginner.html
+++ b/tutorial-beginner.html
@@ -76,16 +76,6 @@
 					  </button>
 					</div>
 		  
-					<!--
-					  Dropdown menu, show/hide based on menu state.
-		  
-					  Entering: "transition ease-out duration-100"
-						From: "transform opacity-0 scale-95"
-						To: "transform opacity-100 scale-100"
-					  Leaving: "transition ease-in duration-75"
-						From: "transform opacity-100 scale-100"
-						To: "transform opacity-0 scale-95"
-					-->
 					<div class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
 						<!-- Active: "bg-gray-100", Not Active: "" -->
 						<a href="login.html" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-0">Login</a>
@@ -158,14 +148,14 @@
 						<div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
 							<div class="group relative">
 								<div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-									<img src="images/origami/crane.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+									<img src="images/origami/dove.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
 								</div>
 								<div class="mt-4 flex justify-between">
 									<div>
 									<h3 class="text-sm text-gray-700">
 										<a href="crane.html">
 										<span aria-hidden="true" class="absolute inset-0"></span>
-										Crane
+										Dove
 										</a>
 									</h3>
 									</div>
@@ -174,14 +164,14 @@
 							</div>
 							<div class="group relative">
 								<div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-									<img src="images/origami/bluebell flower.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+									<img src="images/origami/bamboo.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
 								</div>
 								<div class="mt-4 flex justify-between">
 									<div>
 									<h3 class="text-sm text-gray-700">
 										<a href="#">
 										<span aria-hidden="true" class="absolute inset-0"></span>
-										Bluebell Flower
+										Bamboo
 										</a>
 									</h3>
 									</div>
@@ -222,7 +212,7 @@
 							</div>
 							<div class="group relative">
 								<div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-									<img src="images/origami/butterfly.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+									<img src="images/origami/star.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
 								</div>
 								<div class="mt-4 flex justify-between">
 									<div>
