--- a/template.html
+++ b/template.html
@@ -50,14 +50,16 @@
 				  <!-- Profile dropdown -->
 				  <div class="relative ml-3">
 					<div>
-					  <button name="dropdown-toggle" id="dropdown-toggle" class="relative flex rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 border-none">
+					  <button name="dropdown-toggle" id="dropdown-toggle" class="relative flex rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-indigo-900
+             focus:ring-offset-2 border-none">
               <span class="absolute -inset-1.5"></span>
               <span class="sr-only">Open user menu</span>
               <img class="h-16 w-16 rounded-full" src="images/malcom.jpg" alt="">
             </button>
             
             <!-- Add the dropdown menu with a class to control its visibility -->
-            <div name ="dropdown-menu" id="dropdown-menu" class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none hidden" role="menu" aria-labelledby="dropdown-toggle" tabindex="-1">
+            <div name ="dropdown-menu" id="dropdown-menu" class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5
+             focus:outline-none hidden" role="menu" aria-labelledby="dropdown-toggle" tabindex="-1">
               <a href="profile.html" class="block px-4 py-2 text-sm text-gray-700" role="menuitem">Your Profile</a>
               <a href="login.html" class="block px-4 py-2 text-sm text-gray-700" role="menuitem">Login</a>
               <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" id="user-menu-item-2" onclick="clearLocalStorage()">Sign out</a>
