--- a/rewards.html
+++ b/rewards.html
@@ -541,6 +541,8 @@
   
         </div>
     </div>
+    </div>
+</body>
 
   
 
@@ -615,5 +617,4 @@
 	
 	<script src="javascript/hamburger.js"></script>
 	<script src="javascript/carousel.js"></script>
-</body>
 </html>
