--- a/profile.html
+++ b/profile.html
@@ -186,22 +186,22 @@
                 <br>
                 <div class="flex-gallery">
                   <a href="tutorial.html">
-                    <img src="images/origami/bluebell flower.jpg" alt="Image 1">
+                    <img src="images/profile/gallery/crane.png" alt="Image 1" class="h-44 w-44">
                   </a>
                   <a href="tutorial.html">
-                    <img src="images/origami/fox.jpg" alt="Image 2">
+                    <img src="images/profile/gallery/heart.jpg" alt="Image 2" class="h-44 w-44">
                   </a>
                   <a href="crane.html">
-                    <img src="images/origami/crane.jpg" alt="Image 3">
+                    <img src="images/profile/gallery/butterfly.jpg" alt="Image 3" class="h-44 w-44">
                   </a>
                   <a href="tutorial.html">
-                    <img src="images/origami/butterfly.jpg" alt="Image 4">
+                    <img src="images/profile/gallery/lotus.webp" alt="Image 4" class="h-44 w-44">
                   </a>
                   <a href="tutorial.html">
-                    <img src="images/origami/simpleflower.jpg" alt="Image 5">
+                    <img src="images/profile/gallery/fish.webp" alt="Image 5" class="h-44 w-44">
                   </a>
                   <a href="tutorial.html">
-                    <img src="images/origami/cat.jpg" alt="Image 6">
+                    <img src="images/profile/gallery/crab.jpg" alt="Image 6" class="h-44 w-44">
                   </a>
                 </div>
               </div>
