--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
         <div class="md:flex md:justify-between">
           <div class="mb-6 md:mb-0">
-              <a href="https://flowbite.com/" class="flex items-center">
+              <a href="about.html" class="flex items-center">
                   <img src="images/bloopbloopstudio_logo.png" class="h-8 me-3" alt="BloopBloop Studios Logo" />
                   <span class="self-center text-2xl font-semibold whitespace-nowrap text-indigo-50">BloopBloop Studios</span>
               </a>
@@ -294,23 +294,38 @@
     </div>
 </footer>
 
-	<script>
-		const loggedInUser = JSON.parse(localStorage.getItem("loggedInUser"));
+<script>
+	const dropdownToggle = document.getElementById('dropdown-toggle');
+	const dropdownMenu = document.getElementById('dropdown-menu');
 
-		if (loggedInUser && loggedInUser.userLogged) {
-			const userName= loggedInUser.username;
-			const userPassword = loggedInUser.password; 
+	// Toggle the 'hidden' class on the dropdown menu when the button is clicked
+	dropdownToggle.addEventListener('click', () => {
+	dropdownMenu.classList.toggle('hidden');
+	});
 
-			alert(`Welcome ${userName}, you are logged in`);
-
-		} else {
-			const confirmLogout = confirm("You are not logged in. Do you want to go to the login page?");
-			if (confirmLogout) {
-				window.location.href = "login.html";
+	// Close the dropdown menu when clicking outside of it
+	document.addEventListener('click', (event) => {
+	if (!dropdownMenu.contains(event.target) && !dropdownToggle.contains(event.target)) {
+	dropdownMenu.classList.add('hidden');
 	}
-		}
+	});
 
-	</script>
+	const loggedInUser = JSON.parse(localStorage.getItem("loggedInUser"));
+
+	if (loggedInUser && loggedInUser.userLogged) {
+		const userName= loggedInUser.username;
+		const userPassword = loggedInUser.password; 
+
+		alert(`Welcome ${userName}, you are logged in`);
+
+	} else {
+		const confirmLogout = confirm("You are not logged in. Do you want to go to the login page?");
+		if (confirmLogout) {
+			window.location.href = "login.html";
+}
+	}
+
+</script>
 
 </html>
 
