--- a/about.html
+++ b/about.html
@@ -157,11 +157,11 @@
       <div class="mx-auto max-w-3xl text-center">
       </div>
     
-      <div class="grid gap-12 text-center md:grid-cols-2">
+      <div class="grid gap-12 text-center md:grid-cols-2 px-44">
         <!--First Testimonial-->
         <div class="mb-6 md:mb-0">
           <div class="mb-6 flex justify-center">
-            <img class="w-24 h-24 rounded-full overflow-hidden shadow-lg dark:shadow-black/30 malcimg"
+            <img class="w-44 h-44 rounded-full overflow-hidden shadow-lg dark:shadow-black/30 malcimg"
               src="images/malcom.jpg"
               alt="Malcom's Image" />
           </div>
@@ -175,7 +175,7 @@
         <!-- Second Testimonial -->
         <div class="mb-0">
           <div class="mb-6 flex justify-center">
-            <img class="w-24 h-24 rounded-full overflow-hidden shadow-lg dark:shadow-black/30 yejiimg"
+            <img class="w-44 h-44 rounded-full overflow-hidden shadow-lg dark:shadow-black/30 yejiimg"
               src="images/yeji.jpg"
               alt="Yeji's Image" />
           </div>
@@ -194,12 +194,13 @@
     <div class="malcom">
       
       <h2>Malcom Goh</h2>
-    <h3>Project Leader</h3>
+      <h3>Project Leader</h3>
       <p>
       Hey, I am Malcom. I am the Project Leader of origaME!. I'm an independent and self-motivated individual with new ideas to bring, able to adapt to new challenges
       and tends to carry out tasks to the best of my own abilities!
       </p>
     </div>
+
     <div class="malcimg">
       <img src="images/malcom.jpg">
     </div>
