tutorial and 3d alignment

--- a/crane_1.html
+++ b/crane_1.html
@@ -120,8 +120,26 @@
 
     <!-- Title -->
     <div class="text-left px-56">
+      <div class="flex justify-center items-center">
         <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-5xl pb-11">Crane Tutorial</h1>
-    </div>
+        <button id="openButton">3D</button>
+      </div>
+        
+        <div id="popup" class="popup">
+          <br>
+          <h1>3D Model View</h1>
+            <iframe
+              id="sketchfabIframe"
+              src=""
+              frameborder="0"
+              allow="autoplay; fullscreen; vr"
+              mozallowfullscreen="true"
+              webkitallowfullscreen="true">
+            </iframe>
+            <button id="closeButton">Close</button>
+          </div>
+          </div>
+          <br>
     <div class="card-group px-52 h-auto w-auto">
         <div class="card">
             <img src="images/crane_tutorial/4.jpg" class="card-img-top" alt="...">
@@ -141,23 +159,7 @@
               <h5 class="card-title">Unfold the previous step.</h5>
             </div>
           </div>
-          <div id="popup" class="popup">
-            <br>
-            <h1>3D Model View</h1>
-              <iframe
-                id="sketchfabIframe"
-                src=""
-                frameborder="0"
-                allow="autoplay; fullscreen; vr"
-                mozallowfullscreen="true"
-                webkitallowfullscreen="true">
-              </iframe>
-              <button id="closeButton">Close</button>
-            </div>
-      </div>
-
-
-    <button id="openButton"> 3D </button>
+          </div>
 
     <div class="container">
 
