--- a/profile.html
+++ b/profile.html
@@ -114,39 +114,29 @@
           <div class="flex-container">
             <div class="gallery-container">
               <div class="gallery-item">
-                <img src="images/badge_icon/icon3.png" class="w-32 rounded-full" alt="Avatar" onclick="showModal()">
+                <img src="images/badge_icon/icon1.png" class="w-32 rounded-full" alt="Avatar" onclick="showModal()">
               </div>
               <br>
               <div class="gallery-item2">
-                <a href="tutorial.html">
-                  <img src="images/badge_icon/icon2.png" class="w-32 rounded-full" alt="Avatar">
-                </a>
+                  <img src="images/badge_icon/icon6.png" class="w-32 rounded-full" alt="Avatar">
               </div>
               <br>
-              <a href="tutorial.html">
               <div class="gallery-item2">
-                <img src="images/badge_icon/icon1.png" class="w-32 rounded-full" alt="Avatar">
-              </a>
+                <img src="images/badge_icon/icon2.png" class="w-32 rounded-full" alt="Avatar">
               </div>
             </div>
             <br>
             <div class="gallery-container">
               <div class="gallery-item">
-                <a href="tutorial.html">
-                  <img src="images/badge_icon/icon2.png" class="w-32 rounded-full" alt="Avatar" onclick="showModal()">
-                </a>
+                  <img src="images/badge_icon/icon4.png" class="w-32 rounded-full" alt="Avatar" onclick="showModal()">
               </div>
               <br>
               <div class="gallery-item2">
-                <a href="tutorial.html">
-                <img src="images/badge_icon/icon1.png" class="w-32 rounded-full" alt="Avatar">
-              </a>
+                <img src="images/badge_icon/icon5.png" class="w-32 rounded-full" alt="Avatar">
               </div>
               <br>
               <div class="gallery-item2">
-                <a href="tutorial.html"></a>
                 <img src="images/badge_icon/icon3.png" class="w-32 rounded-full" alt="Avatar">
-              </a>
               </div>
             </div>
           </div>
@@ -179,23 +169,21 @@
       </div>
     </div>
     <div class="modal-container">
-      <div id="myModal" class="modal">
-        <h2 class="text-center">
-          Congratulations!
-          <br>
-          You've received...
+      <div id="myModal" class="modal rounded-lg border-2 ring-indigo-500">
+        <h2 class="text-center text-3xl font-bold pt-10">
+          3 Tutorial Achiever!
         </h2>
-        <h1 class="text-center">
-          50 Stars!
+        <h1 class="text-center pt-3 pb-10">
+          Completes 3 Tutorials
         </h1>
-        <img src="images/1x/happykokoro.png">
+        <img class="w-30 h-50" src="images/badge_icon/yes_5 2.png">
         <button onclick="closeModal()" type="submit" class="bg-indigo-600 shadow-xl hover:bg-indigo-500 text-white font-bold rounded-full p-4 w-48">Close</button>
       </div>
       </div>
 
     </div>
     </div>
-    <section class="collection">
+    <section class="collection pb-32">
       <div class="header-collection">
         <h2>Collections</h2>
       </div>
